# StoryTime

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  previous-milestones.md  pyproject.toml  storytime.bat  storytime.html  storytime.spec  style.css
.github/workflows/: build.yml  release.yml
backend/: config.py  game_logic.py  logger.py  main.py  performance_store.py  prompt_engine.py  requirements.txt  run.bat  run.sh  session.py  settings_manager.py  test.bat  test.sh
backend/providers/: __init__.py  mock.py  ollama.py  openai_compatible.py  registry.py
backend/routes/: generate.py  models.py  performance.py  restart.py  settings.py  simulate.py
backend/tests/: conftest.py  test_config.py  test_frontend_smoke.py  test_game_logic.py  test_mock_provider.py  test_ollama_provider.py  test_openai_compatible_provider.py  test_performance_store.py  test_prompt_engine.py  test_registry.py  test_routes_generate.py  test_routes_models.py  test_routes_performance.py  test_routes_restart.py  test_routes_simulate.py  test_server.py  test_session.py  test_settings.py
docs/: brainstorm.md  previous-milestones.md  release-guide.md  release-notes-0.2.0.md
docs/development-process/: runbook.md
docs/technical-design/: 01-architecture-overview.md  02-frontend-design.md  03-backend-design.md  04-llm-provider-system.md  05-distribution-packaging.md  06-paragraph-scoring.md  index.md
frontend/: getting_started.html  index.html  script.js  style.css
scripts/: build.bat  build.py  build.sh  run.bat  run.sh  smoke_test.py  version.py
